--- a/test.yaml
+++ b/test.yaml
@@ -5,6 +5,8 @@ components:
     components:
       - type: 3
         custom_id: pick-msg
+        min_values: 0
+        max_values: 1
         options:
           - label: channel-backup
             value: TinkerStorm/.github@project-info-rework#readme/projects/channel-backup.yaml
