--- a/test.yaml
+++ b/test.yaml
@@ -4,7 +4,7 @@ components:
   - type: 1
     components:
       - type: 3
-        custom_id: pick-msg
+        custom_id: pick-msg&708092765665493025
         min_values: 0
         max_values: 1
         options:
